[package]
name = "gorse_rs"
version = "0.4.1"
edition = "2021"
description = "Rust SDK for gorse recommender system"
readme = "README.md"
homepage = "https://gorse.io"
repository = "https://github.com/gorse-io/gorse-rs"
license = "Apache-2.0"
keywords = ["gorse", "machine-learning", "recommender-system"]
categories = ["algorithms", "science"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
chrono = "0.4.23"
redis = "0.25.1"
tokio = { version = "1.22.0", features = ["macros"] }
