[package]
name = "gorse_rs"
version = "0.5.0"
edition = "2021"
description = "Rust SDK for gorse recommender system"
readme = "README.md"
homepage = "https://gorse.io"
repository = "https://github.com/gorse-io/gorse-rs"
license = "Apache-2.0"
keywords = ["gorse", "machine-learning", "recommender-system"]
categories = ["algorithms", "science"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.2.0"
thiserror = "2.0.17"

[dev-dependencies]
chrono = "0.4.23"
tokio = { version = "1.22.0", features = ["macros"] }
